# xssh

./: .gitignore  Cargo.toml  THIRD_PARTY_NOTICES.md
.codex/environments/: environment.toml
.github/workflows/: release.yml
assets/app-icon/: README.md  app-icon.icns
migrations/20260629093000_create_servers/: down.sql  up.sql
migrations/20260629102000_add_server_authentication_fields/: down.sql  up.sql
migrations/20260630093000_create_app_settings/: up.sql
script/: build_and_run.sh  package_macos.sh
scripts/: generate_app_icon.sh
src/: main.rs  schema.rs  updater.rs
src/ipc/: authentication.rs  database.rs  migrations.rs  mod.rs  servers.rs  settings.rs  terminal.rs  types.rs
src/pages/: index.rs  mod.rs  post_host.rs  settings.rs
src/pages/index/: actions.rs  chrome.rs  connection.rs  controls.rs  hosts.rs  render.rs  sidebar.rs  tabs.rs  terminal.rs  uploads.rs  windows.rs
src/ui/: assets.rs  base46.rs  i18n.rs  mod.rs  notification.rs  theme.rs
src/ui/icons/: add.rs  close.rs  connect.rs  connection_test.rs  delete.rs  edit.rs  mod.rs  notification_status.rs  password_eye.rs  password_eye_off.rs  server.rs  settings.rs  sidebar_toggle.rs  sort_newest.rs  vault.rs
