[package]
name = "xssh"
version = "0.0.1"
edition = "2024"
description = "A Rust and GPUI SSH client."

[package.metadata.bundle]
name = "XSSH"
identifier = "com.elonehoo.xssh"
icon = ["assets/app-icon/app-icon.icns"]
category = "public.app-category.developer-tools"
short_description = "A Rust and GPUI SSH client."
long_description = """
XSSH is a desktop SSH client built with Rust, GPUI, and SQLite-backed host storage.
"""

[dependencies]
anyhow = "1.0.98"
diesel = { version = "2.3.10", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.3.2", features = ["sqlite"] }
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "1505b1487131adbb443f6c69e87847db35bfa2d1" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
vt100 = "0.16.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
